--- a/ionFinder/man/ionFinder/usage.txt.in
+++ b/ionFinder/man/ionFinder/usage.txt.in
@@ -1,2 +1,3 @@
 usage: @ION_FINDER_TARGET@ [options] [input_dir ...]
 usage: @ION_FINDER_TARGET@ [options] --inputMode tsv <input_file_path> [...]
+usage: @ION_FINDER_TARGET@ [options] --inputMode pd <pdResults_file_path> [...]
