--- a/etc/tsv_constants.hpp.in
+++ b/etc/tsv_constants.hpp.in
@@ -5,7 +5,7 @@
 
 #include <string>
 
-namespace IonFinder {
+namespace inputFiles {
 
     // metadata tags
 	const std::string SAMPLE_NAME = "@SAMPLE_NAME@";
